--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@ body {
     font-size: 14px;
     line-height: 24px;
     font-weight: 400;
-    color: #222;
+    color: #f2f2f2;
 }
 
 .main {
@@ -93,7 +93,7 @@ h4,
 h5,
 h6 {
     font-weight: 600;
-    color: #222;
+    color: #FFF;
     margin-bottom: 0;
 }
 
@@ -131,12 +131,12 @@ p {
     font-size: 15px;
     font-weight: 400;
     line-height: 24px;
-    color: #565656;
+    color: #f2f2f2;
     margin-bottom: 0;
 }
 
 a {
-    color: #444;
+    color: #f2f2f2;
     -webkit-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
 }
@@ -158,7 +158,7 @@ a:focus,
 
 .text-body > a {
     text-decoration: underline;
-    color: #212529;
+    color: #f2f2f2;
 }
 
 ol,
@@ -288,7 +288,7 @@ img {
     display: inline-block;
     font-size: 56px;
     font-weight: 700;
-    text-transform: lowercase;
+    text-transform: capitalize;
     line-height: 1em;
     letter-spacing: -1.6px;
 }
@@ -1331,6 +1331,7 @@ header {
 
 .welcome-intro p {
     font-size: 16px;
+
 }
 
 .welcome-thumb-wrapper {
@@ -1894,16 +1895,15 @@ body.dark,
     z-index: 1;
 }
 
-.single-service > span {
+.single-service > a {
     display: inline-block;
-    height: 4.5rem;
-    width: 4.5rem;
+    
     line-height: 4.5rem;
     text-align: center;
     border-radius: 10px;
 }
 
-.single-service > span::before {
+.single-service > a::before {
     font-size: 2.5rem;
     margin: 0;
 }
