--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -735,7 +735,7 @@ img {
 }
 
 .cta-area {
-    background: rgba(0, 0, 0, 0) url("../img/bg/cta_bg.jpg") no-repeat fixed center center / cover;
+    background: rgba(0, 0, 0, 0) url("../img/welcome/anim-5.webp") no-repeat fixed center center / cover;
 }
 
 .breadcrumb-area {
