--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,6 +71,9 @@ body {
     font-weight: 400;
     color: #f2f2f2;
     background-color: #f2f2f2;
+    
+    margin: 0;
+    padding: 0;
 }
 
 .main {
