--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,10 +59,6 @@
 /* ******************************
 :: 3.0 GLOBAL CSS
 ****************************** */
-* {
-    margin: 0;
-    padding: 0;
-}
 
 body {
     font-family: 'Poppins', sans-serif;
@@ -74,10 +70,13 @@ body {
     
     margin: 0;
     padding: 0;
+
+
 }
 
 .main {
-    background: #f2f2f2;
+    background: #212428;
+
 }
 
 section,
@@ -86,7 +85,7 @@ section,
 }
 
 .container {
-    width: 100%;
+   
     margin: 0 auto;
 }
 
