--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2315,6 +2315,44 @@ body.dark,
 .faq-area.style-two .card-header .btn {
     cursor: inherit;
 }
+/* ******************************
+:: 16.0 REVIEWS AREA CSS
+****************************** */
+.singles-review {
+    position: relative;
+    background-color: #212428;
+    color: #fff;
+    
+    -webkit-box-shadow: 0 10px 50px 0px rgba(0, 0, 0, 0.12);
+    box-shadow: 0 10px 50px 0px rgba(0, 0, 0, 0.12);
+    -webkit-transform: scale(0.96);
+    transform: scale(0.96);
+    -webkit-transition: background-color, -webkit-transform 0.3s ease-in-out 0s;
+    transition: background-color, -webkit-transform 0.3s ease-in-out 0s;
+    transition: background-color, transform 0.3s ease-in-out 0s;
+    transition: background-color, transform 0.3s ease-in-out 0s, -webkit-transform 0.3s ease-in-out 0s;
+    z-index: 1;
+}
+.singles-review img
+{
+    width: 20px;
+    height: 20px;
+}
+.singles-review h4
+{
+    font-size: 16px;
+}
+.singles-review h5
+{
+    font-size: 15px;
+}
+.owl-item.active.center .singles-review {
+    background-color: #212428;
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+
 
 /* ******************************
 :: 16.0 REVIEWS AREA CSS
@@ -2368,6 +2406,13 @@ body.dark,
     -webkit-transform: translateY(-10px);
     transform: translateY(-10px);
 }
+
+
+
+
+
+
+
 
 /* ******************************
 :: 18.0 BLOG AREA CSS
