--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -222,7 +222,7 @@
     }
 
     .welcome-intro {
-        margin-top: 30px;
+        margin-top: 85px;
     }
 
     .welcome-intro h1 {
@@ -264,7 +264,7 @@
 
 @media (max-width: 575px) {
     .welcome-intro {
-        margin-top: 0;
+        margin-top: 3rem;
     }
 
     .welcome-intro h1 {
