--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -720,7 +720,10 @@ img {
 
 /*BACKGROUND IMAGES*/
 .welcome-area {
-    background: url("../img/bg/7.jpg") no-repeat fixed center center / cover;
+    background: rgba(0, 0, 0, 0) url("../img/bg/7.jpg") no-repeat fixed center center / cover;
+}
+.welcome-area2 {
+    background: rgba(0, 0, 0, 0) url("../img/welcome/darkng.jpg") no-repeat fixed center center / cover;
 }
 
 .homepage-2 .welcome-area {
@@ -1322,7 +1325,11 @@ header {
 :: 8.0 WELCOME AREA CSS
 ****************************** */
 .welcome-area {
-    height: 800px;
+    
+    z-index: 1;
+}
+.welcome-area2 {
+    
     z-index: 1;
 }
 
@@ -1334,7 +1341,7 @@ header {
 }
 
 .welcome-intro p {
-    font-size: 16px;
+    font-size: 20px;
 
 }
 
@@ -3127,69 +3134,8 @@ body.dark,
     font-weight: 600;
 }
 
-.nft {
-
-}
-</style>
-
-<section class="section content-area dark-bg pt-5">
-<div id="ret-inv" class="common_spacing">
-    <div class="" >
-        <div class="section-title text-center">
-            <h2 class="title" style="color:#fff; text-transform: capitalize;"><strong> Primary Technology We Use</strong></h2>
-            <hr style="background: #fff !important; height: 2px; width: 90px; text-align: center; position: relative; margin: 0 auto 30px; border: 0;">
-            </div>
-        <div class=" col-md-12 col-md -6 col-sm-6  types text-center nft  ">
-            <ul class="type-list prtlists">
-                <div class="row">
-                <div class="col-sm">
-                    <li class="feature-box-5">
-                        <div class="icon"> <img src="assets/img/welcome/te.jpg"><img src="assets/img/welcome/yello green.jpg"><img src="assets/img/welcome/blueo.jpg"> </div>
-                        <h4>Blockchain Platforms</h4> </li>
-                  </div>
-                  <div class="col-sm">
-                    <li class="feature-box-5">
-                        <div class="icon"> <img src="assets/img/welcome/wax.jpg"><img src="assets/img/welcome/eth.jpg"> </div>
-                        <h4>Blockchain Platforms</h4> </li>
-                  </div>
-                  <div class="col-sm">
-                    <li class="feature-box-5">
-                        <div class="icon">  <img src="assets/img/welcome/ipfs.jpg"><img src="assets/img/welcome/filecoin.jpg"><img src="assets/img/welcome/pony.jpg"> </div>
-                        <h4>Storage Platforms</h4> </li>
-                  </div>
-                </div>
-                
-                
-                <div class="row">
-                    <div class="col-sm">
-                        <li class="feature-box-5">
-                            <div class="icon"> <img src="assets/img/welcome/nftt-1.jpg"><img src="assets/img/welcome/nftt-2.jpg"><img src="assets/img/welcome/nftt-3.jpg">  </div>
-                            <h4>NFT Standards</h4> </li>
-                    </div>
-                    <div class="col-sm">
-                        <li class="feature-box-5">
-                            <div class="icon"> <img src="assets/img/welcome/nftt-5.jpg"><img src="assets/img/welcome/nftt-7.jpg"><img src="assets/img/welcome/nftt-6.jpg">  </div>
-                            <h4>NFT Standards</h4> </li>
-                    </div>
-                    <div class="col-sm">
-                        <li class="feature-box-5">
-                            <div class="icon">  <img src="assets/img/welcome/angular.jpg"><img src="assets/img/welcome/hue.jpg"><img src="assets/img/welcome/react.jpg"> </div>
-                            <h4>FrontEnd Frameworks</h4> </li>
-
-                    </div>
-                  </div>
-                
-                    
-                
-            </ul>
-        </div>
-    </div>
-</div>
-</section>
 
 
-
-<style type="text/css">
 .p-t330 {
 padding-top: 200px;
 }
@@ -3333,9 +3279,6 @@ transition: all 0.3s linear;
 .bg-cta a:hover {
 color: #fff!important;
 }
-</style>
-
-<style type="text/css">
 .tech-padding {
 padding-bottom: 100px;
 }
@@ -4258,11 +4201,7 @@ font-size: 60px;
         .ban_form .intl-tel-input .country-list .country {
             color: #000;
         }
-        </style>
-
-
-
-        <style type="text/css">
+     
         .formdiv form>h4 {
             float: left;
             display: inline-block;
