--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1242,11 +1242,13 @@ header {
     border: none;
     font-weight: 600;
     border-radius: 0;
+    color: #000;
 }
 
 .modal-header .icon-close {
     font-size: 24px;
     cursor: pointer;
+    color: #000;
 }
 
 .modal-body {
