--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,19 +60,29 @@
 :: 3.0 GLOBAL CSS
 ****************************** */
 
-body {
+
+*
+{
+	margin:0;
+	padding: 0;
+    box-sizing: border-box;
+}
+
+body
+{
     font-family: 'Poppins', sans-serif;
     
     
     font-weight: 400;
     color: #f2f2f2;
     background-color: #f2f2f2;
-    
-    margin: 0;
-    padding: 0;
-    
-
-
+	overflow-x: hidden;
+	background-image: url(background.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	width: 100%;
+	height: 100vh;
 }
 
 .main {
