--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+
 /* ************************************************************
 :: Template Name: Digimax - SEO & Digital Marketing Agency HTML Template
 :: Template URI: http://theme-land.com/digimax
@@ -60,29 +61,18 @@
 :: 3.0 GLOBAL CSS
 ****************************** */
 
-
-*
-{
-	margin:0;
-	padding: 0;
-    box-sizing: border-box;
-}
-
-body
-{
+body {
     font-family: 'Poppins', sans-serif;
     
     
     font-weight: 400;
     color: #f2f2f2;
     background-color: #f2f2f2;
-	overflow-x: hidden;
-	background-image: url(background.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 100%;
-	height: 100vh;
+    
+    margin: 0;
+    padding: 0;
+
+
 }
 
 .main {
