--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -1,7 +1,7 @@
 .sidebar-form
 {
 	position: fixed;
-	top: 50%;
+	top: 55%;
 	right: -350px;
 	width: 350px;
 	box-shadow: 0 0 5px rgba(0,0,0,.3);
@@ -10,7 +10,8 @@
 	padding: 20px;
 	transform: translateY(-50%);
 	transition: right .4s linear;
-    z-index: 5;
+    z-index: 10000000000000000;
+	
 }
 
 .sidebar-form.show
@@ -34,6 +35,7 @@
 	left: -95px;
 	top: 50%;
 	transform: translateY(-50%) rotate(-90deg);
+	
 }
 
 .sidebar-form h3
@@ -50,7 +52,7 @@
 .sidebar-form  .form-group
 {
 	margin-bottom: 10px;
-	z-index: 4;
+	
 }
 
 .sidebar-form  .form-group label
