added all changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3552,8 +3552,8 @@ font-size: 60px;
     text-rendering: optimizeLegibility !important;
     letter-spacing: .5px;
     box-sizing: border-box;
-    background-color: #fd3838;
-background-image: linear-gradient(147deg, #FFE53B 0%, #fd3838 74%);
+    background-color: #fd3838a2;
+background-image: linear-gradient(147deg, #ffe53bb4 0%, #fd383894 74%);
     color: #fff;
     padding: 5px 0;
     transition: 1s;
