finished the dao page exchnagepage

--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -135,9 +135,9 @@ color: #f1f6fe;
 color: #011338;
 }
 
-a {
+/* a {
 color: #fd3838;
-}
+} */
 
 .b-r {
 border-radius: 20px;
@@ -145,6 +145,39 @@ border-radius: 20px;
 
 .fc {
 color: #fd3838;
+}
+.align-items-center {
+    align-items: center!important;
+}
+.d-flex {
+    display: flex!important;
+}
+.mt-2 {
+    margin-top: 0.5rem!important;
+}
+.card-title {
+    margin-bottom: 0.5rem;
+}
+.accordion-button:not(.collapsed) {
+    background: 0 0;
+}
+.accordion-item:first-of-type .accordion-button {
+    border-top-left-radius: calc(0.25rem - 1px);
+    border-top-right-radius: calc(0.25rem - 1px);
+    background-color: white;
+}
+h3 {
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+    font-weight: 500;
+    line-height: 1.2;
+    font-size: 1rem;
+}
+.align-items-center {
+    align-items: center!important;
+}
+.ms-3 {
+    margin-left: 1rem!important;
 }
 
 
@@ -448,6 +481,7 @@ box-shadow: none !important;
 .hero-faq-section-app .accordion-body {
 color: #737272;
 }
+
 
 .whychoose-banner-image {
 width: 80%;
@@ -3699,8 +3733,9 @@ button {
     width: 1.25rem;
     height: 1.25rem;
     margin-left: auto;
-    content: "";
-    background-image: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
+    content: ">";
+    color: black;
+    /* background-image: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e); */
 
     background-repeat: no-repeat;
     background-size: 1.25rem;
@@ -3732,4 +3767,11 @@ button {
 }
 [type=button], [type=reset], [type=submit], button {
     -webkit-appearance: button;
+}
+.accordion-body{
+    background-color: #f2f2f2;
+    color: #000;
+    padding: 1rem;
+    
+
 }
