--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -3775,3 +3775,12 @@ button {
     
 
 }
+h2, h2 {
+    font-size: calc(1.325rem + .9vw);
+}
+.mb-4 {
+    margin-bottom: 1.5rem!important;
+}
+.mb-3 {
+    margin-bottom: 1rem!important;
+}
