--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1346,6 +1346,7 @@ header {
 
 .welcome-intro p {
     font-size: 20px;
+    font-weight: 600;
 
 }
 
@@ -5523,6 +5524,6 @@ background-image: linear-gradient(147deg, #ffe53bb4 0%, #fd383894 74%);
  .pro .media{
     border: 0.2px solid #fc573b;
     border-radius: 5px;
-    margin-bottom: 2px;
+    margin-bottom: 10px;
     
 }
